[tool.poetry]
    authors     = ["Lucas Parzianello <lucaspar@users.noreply.github.com>"]
    description = ""
    name        = "spark-312"
    readme      = "README.md"
    version     = "0.1.0"

    [tool.poetry.dependencies]
        pyspark = "^3.5.0"
        python  = ">=3.12,<3.13"


[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core"]
